--- a/06_decision_trees.ipynb
+++ b/06_decision_trees.ipynb
@@ -140,7 +140,7 @@
         "        plt.tight_layout()\n",
         "    plt.savefig(path, format=fig_extension, dpi=resolution)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -156,10 +156,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "VL4MqfaTTT5t",
-        "outputId": "57c30e09-3fca-4c7d-fbc8-852371d54f27",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "57c30e09-3fca-4c7d-fbc8-852371d54f27"
       },
       "source": [
         "from sklearn.datasets import load_iris\n",
@@ -172,7 +172,7 @@
         "tree_clf = DecisionTreeClassifier(max_depth=2, random_state=42)\n",
         "tree_clf.fit(X, y)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -197,11 +197,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "icY4H57-TT5u",
-        "outputId": "e169004a-f095-431e-c6c2-d2689f786319",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 440
-        }
+        },
+        "outputId": "e169004a-f095-431e-c6c2-d2689f786319"
       },
       "source": [
         "from graphviz import Source\n",
@@ -218,7 +218,7 @@
         "\n",
         "Source.from_file(os.path.join(IMAGES_PATH, \"iris_tree.dot\"))"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -239,11 +239,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "SxDFU4qDTT5v",
-        "outputId": "90b64fdb-9b83-4218-90ba-6f5089262cc3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 405
-        }
+        },
+        "outputId": "90b64fdb-9b83-4218-90ba-6f5089262cc3"
       },
       "source": [
         "from matplotlib.colors import ListedColormap\n",
@@ -287,7 +287,7 @@
         "save_fig(\"decision_tree_decision_boundaries_plot\")\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,15 +329,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "6bUjapxzTT5w",
-        "outputId": "1076f786-61f2-489b-a739-00316de9b77c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1076f786-61f2-489b-a739-00316de9b77c"
       },
       "source": [
         "tree_clf.predict_proba([[5, 1.5]])"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -357,15 +357,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "ebBZz-8ITT5x",
-        "outputId": "2138ae1f-48f7-41c7-a289-ecd8a386e531",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2138ae1f-48f7-41c7-a289-ecd8a386e531"
       },
       "source": [
         "tree_clf.predict([[5, 1.5]])"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -394,15 +394,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "8BS2cs-3TT5y",
-        "outputId": "b0d66052-d23f-47ea-a9da-900ae82b5781",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b0d66052-d23f-47ea-a9da-900ae82b5781"
       },
       "source": [
         "X[(X[:, 1]==X[:, 1][y==1].max()) & (y==1)] # widest Iris versicolor flower"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,10 +422,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Ou3AyoWSTT5z",
-        "outputId": "93467a94-4212-4f30-9896-8eae1a3abee7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "93467a94-4212-4f30-9896-8eae1a3abee7"
       },
       "source": [
         "not_widest_versicolor = (X[:, 1]!=1.8) | (y==2)\n",
@@ -435,7 +435,7 @@
         "tree_clf_tweaked = DecisionTreeClassifier(max_depth=2, random_state=40)\n",
         "tree_clf_tweaked.fit(X_tweaked, y_tweaked)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -460,11 +460,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "tvb5Jo5DTT5z",
-        "outputId": "e2ee9ad2-01b5-4fb8-9f5d-f5491b02c71f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 405
-        }
+        },
+        "outputId": "e2ee9ad2-01b5-4fb8-9f5d-f5491b02c71f"
       },
       "source": [
         "plt.figure(figsize=(8, 4))\n",
@@ -477,7 +477,7 @@
         "save_fig(\"decision_tree_instability_plot\")\n",
         "plt.show()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -510,11 +510,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "AERyJLMjTT50",
-        "outputId": "6be74c45-cfc2-4c64-9e2a-351ed4e1ae42",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 495
-        }
+        },
+        "outputId": "6be74c45-cfc2-4c64-9e2a-351ed4e1ae42"
       },
       "source": [
         "from sklearn.datasets import make_moons\n",
@@ -537,7 +537,7 @@
         "save_fig(\"min_samples_leaf_plot\")\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -575,11 +575,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ejdYhqTpTT50",
-        "outputId": "9039b680-6e34-41b4-a60a-ce905b67b822",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 331
-        }
+        },
+        "outputId": "9039b680-6e34-41b4-a60a-ce905b67b822"
       },
       "source": [
         "angle = np.pi / 180 * 20\n",
@@ -594,7 +594,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,11 +626,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "6QV_G3dbTT51",
-        "outputId": "997bdbfd-3d35-4d3f-bf7d-f9fbaf829c7b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 495
-        }
+        },
+        "outputId": "997bdbfd-3d35-4d3f-bf7d-f9fbaf829c7b"
       },
       "source": [
         "np.random.seed(6)\n",
@@ -656,7 +656,7 @@
         "save_fig(\"sensitivity_to_rotation_plot\")\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -712,17 +712,17 @@
         "y = 4 * (X - 0.5) ** 2\n",
         "y = y + np.random.randn(m, 1) / 10"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "JAlVQ2SoTT52",
-        "outputId": "96f416ef-be94-43af-a8fd-b13c5561c1cd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "96f416ef-be94-43af-a8fd-b13c5561c1cd"
       },
       "source": [
         "from sklearn.tree import DecisionTreeRegressor\n",
@@ -730,7 +730,7 @@
         "tree_reg = DecisionTreeRegressor(max_depth=2, random_state=42)\n",
         "tree_reg.fit(X, y)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -755,11 +755,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "aYxAGEkqTT52",
-        "outputId": "0e234218-f708-4ac3-ddb3-17eb67cb6913",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 315
-        }
+        },
+        "outputId": "0e234218-f708-4ac3-ddb3-17eb67cb6913"
       },
       "source": [
         "from sklearn.tree import DecisionTreeRegressor\n",
@@ -802,7 +802,7 @@
         "save_fig(\"tree_regression_plot\")\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -840,23 +840,23 @@
         "        filled=True\n",
         "    )"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "HTWcmK1uTT53",
-        "outputId": "b44c9065-a49c-446e-e119-8635d44818b3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 380
-        }
+        },
+        "outputId": "b44c9065-a49c-446e-e119-8635d44818b3"
       },
       "source": [
         "Source.from_file(os.path.join(IMAGES_PATH, \"regression_tree.dot\"))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -877,11 +877,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "mUUfniCmTT54",
-        "outputId": "20991b8c-c4f3-441e-d6d7-e81efba02824",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 315
-        }
+        },
+        "outputId": "20991b8c-c4f3-441e-d6d7-e81efba02824"
       },
       "source": [
         "tree_reg1 = DecisionTreeRegressor(random_state=42)\n",
@@ -914,7 +914,7 @@
         "save_fig(\"tree_regression_regularization_plot\")\n",
         "plt.show()"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1011,7 +1011,7 @@
         "\n",
         "X, y = make_moons(n_samples=10000, noise=0.4, random_state=42)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1033,7 +1033,7 @@
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -1049,17 +1049,21 @@
       "cell_type": "code",
       "metadata": {
         "id": "2KvCBsN-TT6C",
-        "outputId": "8d1497c7-e980-4ee3-e633-b73abd2d3e3d"
+        "outputId": "9fd5e5ee-4d31-42c6-9051-96749ec73565",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from sklearn.model_selection import GridSearchCV\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
         "\n",
         "params = {'max_leaf_nodes': list(range(2, 100)), 'min_samples_split': [2, 3, 4]}\n",
         "grid_search_cv = GridSearchCV(DecisionTreeClassifier(random_state=42), params, verbose=1, cv=3)\n",
         "\n",
         "grid_search_cv.fit(X_train, y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1072,7 +1076,7 @@
           "output_type": "stream",
           "text": [
             "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-            "[Parallel(n_jobs=1)]: Done 882 out of 882 | elapsed:    5.7s finished\n"
+            "[Parallel(n_jobs=1)]: Done 882 out of 882 | elapsed:    8.9s finished\n"
           ],
           "name": "stderr"
         },
@@ -1080,19 +1084,33 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "GridSearchCV(cv=3, estimator=DecisionTreeClassifier(random_state=42),\n",
+              "GridSearchCV(cv=3, error_score=nan,\n",
+              "             estimator=DecisionTreeClassifier(ccp_alpha=0.0, class_weight=None,\n",
+              "                                              criterion='gini', max_depth=None,\n",
+              "                                              max_features=None,\n",
+              "                                              max_leaf_nodes=None,\n",
+              "                                              min_impurity_decrease=0.0,\n",
+              "                                              min_impurity_split=None,\n",
+              "                                              min_samples_leaf=1,\n",
+              "                                              min_samples_split=2,\n",
+              "                                              min_weight_fraction_leaf=0.0,\n",
+              "                                              presort='deprecated',\n",
+              "                                              random_state=42,\n",
+              "                                              splitter='best'),\n",
+              "             iid='deprecated', n_jobs=None,\n",
               "             param_grid={'max_leaf_nodes': [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12,\n",
               "                                            13, 14, 15, 16, 17, 18, 19, 20, 21,\n",
               "                                            22, 23, 24, 25, 26, 27, 28, 29, 30,\n",
               "                                            31, ...],\n",
               "                         'min_samples_split': [2, 3, 4]},\n",
-              "             verbose=1)"
+              "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+              "             scoring=None, verbose=1)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 5
         }
       ]
     },
@@ -1100,24 +1118,32 @@
       "cell_type": "code",
       "metadata": {
         "id": "ka60qQ2nTT6C",
-        "outputId": "c34c0c98-7317-4667-cd2f-228c9d6440c1"
+        "outputId": "d4697607-ffa6-4a69-9595-66bdc70a0006",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "grid_search_cv.best_estimator_"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "DecisionTreeClassifier(max_leaf_nodes=17, random_state=42)"
+              "DecisionTreeClassifier(ccp_alpha=0.0, class_weight=None, criterion='gini',\n",
+              "                       max_depth=None, max_features=None, max_leaf_nodes=17,\n",
+              "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
+              "                       min_samples_leaf=1, min_samples_split=2,\n",
+              "                       min_weight_fraction_leaf=0.0, presort='deprecated',\n",
+              "                       random_state=42, splitter='best')"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 6
         }
       ]
     },
@@ -1143,7 +1169,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "nKZpq3FwTT6E",
-        "outputId": "dc5cacc6-c2a8-4fed-d5cc-15722e18eae9"
+        "outputId": "c1fee736-3f73-4418-f94c-f22981813dce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from sklearn.metrics import accuracy_score\n",
@@ -1151,7 +1180,7 @@
         "y_pred = grid_search_cv.predict(X_test)\n",
         "accuracy_score(y_test, y_pred)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1163,7 +1192,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 7
         }
       ]
     },
@@ -1213,7 +1242,7 @@
         "    y_mini_train = y_train[mini_train_index]\n",
         "    mini_sets.append((X_mini_train, y_mini_train))"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1229,10 +1258,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "Aa1CtBiVTT6F",
-        "outputId": "8fad094d-404a-44d5-a865-ec665e080cd0"
+        "outputId": "209f7526-59a1-4db7-abce-f92e06417fd4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from sklearn.base import clone\n",
+        "import numpy as np\n",
+        "\n",
         "\n",
         "forest = [clone(grid_search_cv.best_estimator_) for _ in range(n_trees)]\n",
         "\n",
@@ -1246,7 +1280,7 @@
         "\n",
         "np.mean(accuracy_scores)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1258,9 +1292,20 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 10
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "weV-AV7NXbbE"
+      },
+      "source": [
+        "forest"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1282,8 +1327,42 @@
         "for tree_index, tree in enumerate(forest):\n",
         "    Y_pred[tree_index] = tree.predict(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9hYuPtI9YEmf",
+        "outputId": "c69e601a-342c-474e-f2f9-71dda493867c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "Y_pred"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 1, 0, ..., 0, 0, 1],\n",
+              "       [1, 1, 1, ..., 0, 0, 0],\n",
+              "       [1, 1, 0, ..., 0, 0, 1],\n",
+              "       ...,\n",
+              "       [1, 1, 0, ..., 0, 0, 0],\n",
+              "       [1, 1, 0, ..., 0, 0, 1],\n",
+              "       [1, 1, 0, ..., 0, 0, 0]], dtype=uint8)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1295,7 +1374,7 @@
         "\n",
         "y_pred_majority_votes, n_votes = mode(Y_pred, axis=0)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1311,12 +1390,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "X_bFy7boTT6G",
-        "outputId": "b8f910b2-3f66-4627-b425-e03ea3c334d4"
+        "outputId": "61ee45bc-827d-4ebf-a43b-c68e254a3a16",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "accuracy_score(y_test, y_pred_majority_votes.reshape([-1]))"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1328,7 +1410,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 16
         }
       ]
     }
