--- a/19_training_and_deploying_at_scale.ipynb
+++ b/19_training_and_deploying_at_scale.ipynb
@@ -2011,7 +2011,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please follow the steps in the [Deploying TensorFlow models to TensorFlow Serving](http://localhost:8888/notebooks/19_training_and_deploying_at_scale.ipynb#Deploying-TensorFlow-models-to-TensorFlow-Serving-(TFS)) section above."
+    "Please follow the steps in the [Deploying TensorFlow models to TensorFlow Serving](#Deploying-TensorFlow-models-to-TensorFlow-Serving-(TFS)) section above."
    ]
   },
   {
