Fix link to 'Deploying TF models to TFS' section

--- a/19_training_and_deploying_at_scale.ipynb
+++ b/19_training_and_deploying_at_scale.ipynb
@@ -2011,7 +2011,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please follow the steps in the [Deploying TensorFlow models to TensorFlow Serving](#Deploying-TensorFlow-models-to-TensorFlow-Serving-(TFS)) section above."
+    "Please follow the steps in the <a href=\"#Deploying-TensorFlow-models-to-TensorFlow-Serving-(TFS)\">Deploying TensorFlow models to TensorFlow Serving</a> section above."
    ]
   },
   {
