Chapter 12 Multi Layer Example

--- a/12_custom_models_and_training_with_tensorflow.ipynb
+++ b/12_custom_models_and_training_with_tensorflow.ipynb
@@ -2956,13 +2956,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "housing = fetch_california_housing()\n",
+    "X_train_full, X_test, y_train_full, y_test = train_test_split(\n",
+    "    housing.data, housing.target.reshape(-1, 1), random_state=42)\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(\n",
+    "    X_train_full, y_train_full, random_state=42)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_valid_scaled = scaler.transform(X_valid)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
     "class MyMultiLayer(keras.layers.Layer):\n",
     "    def call(self, X):\n",
     "        X1, X2 = X\n",
+    "        print(\"X1.shape: \", X1.shape ,\" X2.shape: \", X2.shape) # Debugging of custom layer\n",
     "        return X1 + X2, X1 * X2\n",
     "\n",
     "    def compute_output_shape(self, batch_input_shape):\n",
@@ -2972,7 +2988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2983,13 +2999,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((11610, 4), (11610, 4))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def split_data(data):\n",
+    "    columns_count = data.shape[-1]\n",
+    "    half = columns_count // 2\n",
+    "    return data[:, :half], data[:, half:]\n",
+    "\n",
+    "X_train_scaled_A, X_train_scaled_B = split_data(X_train_scaled)\n",
+    "X_valid_scaled_A, X_valid_scaled_B = split_data(X_valid_scaled)\n",
+    "X_test_scaled_A, X_test_scaled_B = split_data(X_test_scaled)\n",
+    "\n",
+    "# Printing the splitted data shapes\n",
+    "X_train_scaled_A.shape, X_train_scaled_B.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X1.shape:  (None, 2)  X2.shape:  (None, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "inputs1 = keras.layers.Input(shape=[2])\n",
     "inputs2 = keras.layers.Input(shape=[2])\n",
     "outputs1, outputs2 = MyMultiLayer()((inputs1, inputs2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X1.shape:  (11610, 4)  X2.shape:  (11610, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "outputs1, outputs2 = MyMultiLayer()((X_train_scaled_A, X_train_scaled_B))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X1.shape:  (None, 4)  X2.shape:  (None, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_A = keras.layers.Input(shape=X_train_scaled_A.shape[-1])\n",
+    "input_B = keras.layers.Input(shape=X_train_scaled_B.shape[-1])\n",
+    "hidden_A, hidden_B = MyMultiLayer()((input_A, input_B))\n",
+    "hidden_A = keras.layers.Dense(30, activation='selu')(hidden_A)\n",
+    "hidden_B = keras.layers.Dense(30, activation='selu')(hidden_B)\n",
+    "concat = keras.layers.Concatenate()((hidden_A, hidden_B))\n",
+    "output = keras.layers.Dense(1)(concat)\n",
+    "model = keras.Model(inputs=[input_A, input_B], outputs=[output])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss='mse', optimizer='nadam')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/2\n",
+      "X1.shape:  (None, 4)  X2.shape:  (None, 4)\n",
+      "X1.shape:  (None, 4)  X2.shape:  (None, 4)\n",
+      "317/363 [=========================>....] - ETA: 0s - loss: 2.2808X1.shape:  (None, 4)  X2.shape:  (None, 4)\n",
+      "363/363 [==============================] - 1s 1ms/step - loss: 2.1142 - val_loss: 1.3630\n",
+      "Epoch 2/2\n",
+      "363/363 [==============================] - 0s 914us/step - loss: 0.9684 - val_loss: 0.9773\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x1791aac10>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit((X_train_scaled_A, X_train_scaled_B), y_train, epochs=2, validation_data=((X_valid_scaled_A, X_valid_scaled_B), y_valid))"
    ]
   },
   {
@@ -6242,7 +6379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
