--- a/13_loading_and_preprocessing_data.ipynb
+++ b/13_loading_and_preprocessing_data.ipynb
@@ -3651,19 +3651,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 65286), started 21:50:29 ago. (Use '!kill 65286' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-b3cf51af1604e890\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-7d8ea58c5b70917a\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-b3cf51af1604e890\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-7d8ea58c5b70917a\");\n",
+       "          const url = new URL(\"http://localhost\");\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
        "            url.port = port;\n",
@@ -3682,9 +3699,25 @@
     }
    ],
    "source": [
-    "%load_ext tensorboard\n",
+    "%reload_ext tensorboard\n",
     "%tensorboard --logdir=./my_logs --port=6006"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%reload_ext tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -4848,16 +4881,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.0+"
+   "version": ""
   },
   "nav_menu": {
    "height": "264px",
